--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
     <link rel="stylesheet" href="css/style.css">
+    <style type="text/css">
+    	.score {
+    		font-size: 64px;
+    		color: chocolate;
+    	}
+    </style>
 </head>
 <body>
+	<div class="score">得分：<em id="my-score">0</em>
+	</div>
     <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
